--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.3",
+    "sass": "^1.53.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -47,7 +48,8 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "axios-mock-adapter": "^1.19.0",
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "phosphor-react": "^1.4.1"
   },
   "eslintConfig": {
     "extends": [
